k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harmonia
  labels:
    app.kubernetes.io/part-of: harmonia
